--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -1,19 +1,18 @@
-##How Category Words and User Feedback Relate to Review Ratings
+#Is There Just No Pleasing Some People?:
+##Categories, Feedback and How They Relate to Pleasure
 
 ###Introduction
-There are categories of businesses in the *[Yelp! dataset](http://www.yelp.com/dataset_challenge)* that may very well transcend the quality of the businesses within them. On average, the businesses within some categories enjoy very high ratings from Yelp! reviewers. Nevertheless, there are individuals who have assigned to businesses within one of these **pleasure categories** at least one review that is at least 1.5 stars lower than the category's average rating. These people will heretofore be known as the **the miserables**. The inverse is also true: there are those who have assigned at least one rating at least 1.5 stars higher than the average category rating for a business in the on-average lowest rated categories. They will be referred to as **the joyous**.
+There are categories of businesses in the *[Yelp! dataset](http://www.yelp.com/dataset_challenge)* that may very well transcend the quality of the businesses within them. The businesses within some categories enjoy, on average, very high ratings from *Yelp!* reviewers. Nevertheless, there are individuals who have assigned to businesses within one of these **pleasuring categories** at least one review that is at least 1.5 stars lower than the category's average rating. These people will heretofore be known as the **the miserables**. The inverse is also true: there are those who have assigned at least one rating at least 1.5 stars higher than the average category rating for a business in an **under-pleasuring** category. They will be referred to as **the joyous**.
 
-My hypothesis is that **the joyous** are comprised of folks who receive more compliments from their peers, those being other Yelp! reviewers. And their counterparts, **the miserables** attract fewer compliments from other Yelp! reviewers. And that, furthermore, there is a correlation between how much positive feedback one receives and the likelihood he or she will enjoy a business in Yelp!, no matter how negative or positive a business's category is found to be.
+My hypothesis is that **the joyous** are comprised of folks who receive more compliments from their peers, those being other *Yelp!* reviewers. And their counterparts, **the miserables** attract fewer compliments from other *Yelp!* reviewers. And that, furthermore, there is a correlation between how much positive feedback one receives and the likelihood he or she will enjoy a business in *Yelp!*, no matter how negative or positive a business's category is found to be.
 
 ###Methods
 
+Due to the sheer size of the *Yelp!* dataset, it was helpful to first move all the data (user, business, review, etc.) into a PostgreSQL database. It made aggregating 1.6 million reviews and over 310,000 users much more practical.
+
 ####Preparing the data
 
-Due to the sheer size of the Yelp! dataset, it was helpful to first move all the data (user, business, review, etc.) into a PostgreSQL database. It made aggregating 1.6 million reviews and over 310,000 users much more practical.
-
-Because each business has multiple categories associated with them, I chose to concatenate all the categories for a business into one string, or **category combination**. And to find out which of these combinations are the most and least pleasurable, I only considered those category combinations with at least six businesses associated with them and at least 30 reviews shared among their businesses.
-
-**Top 3 most pleasing category combinations**:
+Because each business has multiple categories associated with them, I chose to concatenate all the categories for a business into one string, or **category combination**. And to find out which of these combinations are the **most and least pleasuring**, I only considered those category combinations with at least six businesses associated with them and at least 30 reviews shared among their businesses.
 
 ```{r,echo=F, fig.height=1}
 suppressMessages(library(RPostgreSQL))
@@ -24,25 +23,110 @@ top10 <- dbGetQuery(con,"select categories from brian.top_categories limit 3;")
 names(top10) <- c('category')
 bottom10 <-  dbGetQuery(con,'select categories from brian.bottom_categories limit 3;')
 names(bottom10) <- c('category')
-top10$category
-```
-
-**Top 3 least pleasing category combinations**:
-```{r,echo=F}
-bottom10$category
 ```
 
 ####The Joyous vs. The Miserables vs. Statistical Inference
 
-Next I wanted to see if there is a difference in the feedback the joyous and miserable receive. I performed a sampling distribution of the sample means of hot compliments, funny compliments, total feedback (sum of compliment counts, friends and fans) and the number of reviews written for each of three populations -- the joyous, the miserables and the entire population of Yelp! reviewers. I took 2000 samples 100000 times from each population.
+Next I wanted to see if there is a difference in the feedback **the joyous** and **the miserables** receive. I performed a sampling distribution of the sample means of hot compliments, funny compliments, total feedback (sum of compliment counts, friends and fans) and the number of reviews written for each of three populations -- the joyous, the miserables and the entire population of *Yelp!* reviewers. I took 2000 samples 100000 times from each population.
 
-```{r, eval=F}
-joyous.out <- replicate( 100000, mean( sample(joyous$funny_compliments, 2000) ) )
-miserables.out <- replicate( 100000, mean( sample(miserables$funny_compliments, 2000) ) )
-avgs.out <- replicate( 100000, mean( sample(avgs$funny_compliments, 2000) ) )
+As can be seen in *Figure 3*, **the joyous** enjoy more hot compliments, funny compliments and total feedback than **the miserables**, who receive fewer compliments and total feedback than even the average *Yelp!* reviewer. However, they write, on average, only slightly fewer reviews than the joyous do and well more than the average *Yelp!* reviewer does.
+
+```{r, echo=F}
+drv <- dbDriver("PostgreSQL")
+con <- dbConnect(drv, host="miley.cda5nmppsk8w.us-east-1.redshift.amazonaws.com", 
+                 port="5439", dbname="ncarbdw", user="admin")
+feedb <- dbGetQuery(con,"select 
+        u.useful_votes	+ u.funny_votes	+ u.cool_votes + u.fan_count	+ 
+        u.friend_count	+ u.hot_compliments	+ u.writer_compliments	+ u.photos_compliments	+ 
+        u.cool_compliments	+ u.funny_compliments	+ u.cute_compliments	+ u.plain_compliments feedback from brian.user u;")
 ```
 
-The <span style="color:red; font-family:Georgia; font-size:1em;">red</span> droplines in the figures below denote the sampled mean for the joyous. <span style="color:blue; font-family:Georgia; font-size:1em;">Blue</span> for the miserables. And <span style="color:green; font-family:Georgia; font-size:1em;">green</span> for the entire population of Yelp! reviewers.
+So given that **the joyous** and **the miserables** differ so much in terms of how they are perceived by the *Yelp!* community, I decide to assign each *Yelp!* dataset reviewer to a **feedback group** based on the summary below. **Group 1** reviewers are those who have received between 0 and 2 items of total feedback; whereas, people in **Group 4** have received between 42 and 229400 items of total feedback. Again, the hypothesis here, as extrapolated from the discovery of how **the joyous** are complimented so much more, is that the **Group 4** people will review businesses in **pleasuring** and **under-pleasuring** categories better than their **Group 1** counterparts.
+
+```{r}
+summary(feedb$feedback)
+```
+
+####Natural Language Processing
+
+But which words are the most associated with **pleasuring business categories**? And which words occur most in the **unpleasuring categories**? Natural Language Processing (NLP) was the way to find out. This required cleaning the **category combinations** of punctuation, whitespace, numbers, stop words ('and', 'the', 'a', etc.) and making all their characters lower case. Stem words were then identified among all the category combinations and the number of times each of these stems appeared in a both **pleasuring** category and **under-pleasuring** categories was tallied and compared. See *Figures 3* and *4*.
+
+```{r,echo=F}
+
+suppressMessages(library(tm))
+dest <- 'categories_nlp_docs'
+setwd('/home/ubuntu/coursera_capstone/')
+
+# create corpus
+docs <- Corpus(DirSource(dest,pattern="tsv"));rm(dest)
+# remove numbers
+docs <- tm_map(docs, removeNumbers)
+
+# remove stop words
+docs <- tm_map(docs, removeWords, stopwords("SMART"))
+
+# make all letters lower case
+docs <- tm_map(docs, content_transformer(tolower))
+# remove numbers
+docs <- tm_map(docs, removeNumbers)
+
+# remove stop words
+docs <- tm_map(docs, removeWords, stopwords("SMART"))
+
+# make all letters lower case
+docs <- tm_map(docs, content_transformer(tolower))
+library(SnowballC)
+docs <- tm_map(docs, removePunctuation)
+docs <- tm_map(docs, stripWhitespace)
+
+docs <- tm_map(docs, stemDocument)
+
+dtm <- DocumentTermMatrix(docs)
+freq <- colSums(as.matrix(dtm))
+ord <- order(freq)
+
+
+# most frequent terms
+#freq[tail(ord,n=25)]
+dtms <- removeSparseTerms(dtm, 0.3)
+
+# make a plot of freq terms with correlation above .6
+# plot(dtms,terms =findFreqTerms(dtms, lowfreq=50))
+```
+
+```{r,echo=F,results='hide'}
+df <- data.frame(inspect(TermDocumentMatrix(docs)))
+```
+
+```{r,echo=F}
+suppressMessages(library(dplyr))
+df$diff <- df$joy.tsv - df$misery.tsv
+df$pct.diff <- df$diff/(df$joy.tsv + df$misery.tsv)
+df$names <- row.names(df)
+names(df)[1:2] <- c('joy', 'misery')
+```
+
+So, to finally see how the category stem words interplayed with the perception of a reviewer among his or her peers, I created a term matrix for each category combination and then merged that matrix with a data set of average star ratings for each category according to what feedback group the reviewer falls in.
+
+####Linear Regression
+
+The natural choice seemed to be to take the most **pleasuring** category word, *hair*, and the most **under-pleauring**, *restaurant*, and see how interacting with **feedback group** related to the average rating of a business. Please kindly refer to *Figure 5*.
+
+###Results
+
+**Top 3 most pleasing category combinations**:
+
+```{r,echo=F}
+top10$category
+```
+
+**Top 3 least pleasing category combinations**:
+
+```{r,echo=F}
+bottom10$category
+```
+
+The <span style="color:red; font-family:Georgia; font-size:1em;">red</span> droplines in the figures below denote the sampled mean for **the joyous**. <span style="color:blue; font-family:Georgia; font-size:1em;">Blue</span> for **the miserables**. And <span style="color:green; font-family:Georgia; font-size:1em;">green</span> for the entire population of *Yelp!* reviewers.
 
 ```{r,echo=F,fig.height=2}
 suppressMessages(library(ggplot2))
@@ -158,105 +242,28 @@ grid.arrange(plot3, plot4, ncol=2,nrow=1)
 grid.arrange(plot2, plot1, ncol=2,nrow=1)
 ```
 
-As can be seen, the joyous enjoy more hot compliments, funny compliments and total feedback than the miserables, who receive fewer compliments and total feedback than even the average Yelp! reviewer. However, they write, on average, only slightly fewer reviews than the joyous do and well more than the average Yelp! reviewer does.
-
 Furthermore, Student's t-Tests confirm that the differences between each distribution's sampled means are indeed not equal to zero.
 
 ```{r, echo=F}
 #t.tests
 ```
 
+Here are some examples of words more commonly found in **pleasuring** categories than **under-pleasuring** categories. Not surprisingly, these words are somewhat affirming -- active, life, beauty.
+
 ```{r, echo=F}
-drv <- dbDriver("PostgreSQL")
-con <- dbConnect(drv, host="miley.cda5nmppsk8w.us-east-1.redshift.amazonaws.com", 
-                 port="5439", dbname="ncarbdw", user="admin")
-feedb <- dbGetQuery(con,"select 
-        u.useful_votes	+ u.funny_votes	+ u.cool_votes + u.fan_count	+ 
-        u.friend_count	+ u.hot_compliments	+ u.writer_compliments	+ u.photos_compliments	+ 
-        u.cool_compliments	+ u.funny_compliments	+ u.cute_compliments	+ u.plain_compliments feedback from brian.user u;")
-```
-
-So given that the miserables and the joyous have such different total feedback scores, I decide to assign each Yelp! dataset reviewer to a feedback group based on the summary above. group 1 are those who have received between 0 and 2 items of total feedback whereas people in group 4 have received between 42 and 229400 items of total feedback.
-
-```{r}
-summary(feedb$feedback)
-```
-
-####Natural Language Processing
-
-But which words are the most associated with pleasurable business categories? And which words occur most in the unpleasurable categories? To figure that out, I performed Natural Language Processing (NLP). And among the steps I performed were to clean the category combinations of punctuation, whitespace, numbers, stop words ('and', 'the', 'a', etc.) and make all their characters lower case. Stem words were then identified among all the category combinations and the number of times each of these stems appeared in a pleasurable category and an unpleasurable category was compared.
-
-```{r,echo=F}
-
-suppressMessages(library(tm))
-dest <- 'categories_nlp_docs'
-setwd('/home/ubuntu/coursera_capstone/')
-
-# create corpus
-docs <- Corpus(DirSource(dest,pattern="tsv"));rm(dest)
-# remove numbers
-docs <- tm_map(docs, removeNumbers)
-
-# remove stop words
-docs <- tm_map(docs, removeWords, stopwords("SMART"))
-
-# make all letters lower case
-docs <- tm_map(docs, content_transformer(tolower))
-# remove numbers
-docs <- tm_map(docs, removeNumbers)
-
-# remove stop words
-docs <- tm_map(docs, removeWords, stopwords("SMART"))
-
-# make all letters lower case
-docs <- tm_map(docs, content_transformer(tolower))
-library(SnowballC)
-docs <- tm_map(docs, removePunctuation)
-docs <- tm_map(docs, stripWhitespace)
-
-docs <- tm_map(docs, stemDocument)
-
-dtm <- DocumentTermMatrix(docs)
-freq <- colSums(as.matrix(dtm))
-ord <- order(freq)
-
-
-# most frequent terms
-#freq[tail(ord,n=25)]
-dtms <- removeSparseTerms(dtm, 0.3)
-
-# make a plot of freq terms with correlation above .6
-# plot(dtms,terms =findFreqTerms(dtms, lowfreq=50))
-```
-
-```{r,echo=F,results='hide'}
-df <- data.frame(inspect(TermDocumentMatrix(docs)))
-```
-
-Here are some examples of words more commonly found in **pleasurable** categories than **unpleasurable** categories. Not surprisingly, these words are somewhat affirming -- active, life, beauty.
-
-```{r,echo=F}
-suppressMessages(library(dplyr))
-df$diff <- df$joy.tsv - df$misery.tsv
-df$pct.diff <- df$diff/(df$joy.tsv + df$misery.tsv)
-df$names <- row.names(df)
-names(df)[1:2] <- c('joy', 'misery')
 head(arrange(filter(df, misery > 0), desc(diff)))
 ```
 
-Words more likely to appear in **unpleasurable** categories of businesses can be found below:
+Words more likely to appear in **under-pleasuring** categories of businesses can be found below:
 
 ```{r,echo=F}
 head(arrange(filter(df, misery > 0), diff))
 ```
 
-So, to finally see how the category stem words interplayed with the perception of a reviewer among his or her peers, I created a term matrix for each category combination and then merged that matrix with a data set of average star ratings for each category according to what feedback group the reviewer falls in.
 
-####Linear Regression
 
-The natural choice seemed to be to take the most **pleasurable** category word, **hair**, and the least, **restaurant**, and see how interacting with **feedback group** related to the average rating of a business.
 
-###Results
+
 
 ```{r, echo=F}
 suppressMessages(library(caret))
@@ -308,7 +315,9 @@ test <- test[,colnames(test)%in%c('categories', 'avg_stars', prime.coefs$name)]
 
 fit4 <- lm(avg_stars ~ ., train[,2:ncol(train)])
 
-fit.hair.feedback_group <- lm(avg_stars~ hair * factor(feedback_group), df.stars)
+df.stars$feedback_group <- factor(df.stars$feedback_group)
+
+fit.hair.feedback_group <- lm(avg_stars~ hair * feedback_group, df.stars)
 coef(summary(fit.hair.feedback_group))[c(1,2,5,8),c(1,4)]
 
 ```
@@ -327,7 +336,7 @@ legend("bottomright", inset = .05, lty=c(1,1), lwd=c(2.5,2.5), title = "Feedback
 ```
 
 ```{r, echo=F, results="hide"}
-fit.restaur.feedback_group <- lm(avg_stars~ restaur * factor(feedback_group), df.stars)
+fit.restaur.feedback_group <- lm(avg_stars~ restaur * feedback_group, df.stars)
 coef(summary(fit.restaur.feedback_group))[c(1,2,5,8),c(1,4)]
 ```
 
@@ -340,7 +349,7 @@ abline(coef(fit.restaur.feedback_group)[1] + coef(fit.restaur.feedback_group)[5]
 points(df.stars[df.stars$restaur!=0,]$restaur, df.stars[df.stars$restaur!=0,]$avg_stars, pch = 21, col = "black", bg = "lightblue", cex = .7)
 points(df.stars[df.stars$restaur==0,]$restaur, jitter(df.stars[df.stars$restaur==0,]$avg_stars, 14), pch = 21, col = "black", bg = "salmon", cex = .7)
 title("Average Rating Regressed by Occurrences of 'Restaurant'\nin business's category, interacting with Feedback group")
-legend("topleft", inset = .05, lty=c(1,1), lwd=c(2.5,2.5), title = "Feedback group",legend= c("Lowest","Highest")
+legend("bottomright", inset = .05, lty=c(1,1), lwd=c(2.5,2.5), title = "Feedback group",legend= c("Lowest","Highest")
        ,col = c('blue','red'), horiz=TRUE)
 
 ```
@@ -351,9 +360,9 @@ This is not what I was expecting.
 
 ###Discussion
 
-When I initially began this assingment, my goal was to create a model that might spit out a combination of categories statistically shown to elicit the highest user ratings in the hopes that that category combination would be something absurd like **Bail Bonds | Event Planning | Archery Wholesaler**. When that seemed beyond my reach, I decided to investigate what kind of people disliked businesses in the **pleasure** categories to show that they are miserable no matter what. And that people who get a lot of positive attention -- the hot, the funny, the useful -- will have a good time no matter where they go, since people may very well fawn on them -- for their looks, sense of humor and usefulness.
+When I initially began this project, my goal was to create a model that might spit out a combination of categories statistically shown to elicit the highest user ratings in the hopes that that category combination would be something absurd like **Bail Bonds | Event Planning | Archery Wholesaler**. When that seemed beyond my reach, I decided to investigate what kind of people disliked businesses in the **pleasuring** categories to show that they are miserable no matter what. And that people who get a lot of positive attention -- the hot, the funny, the useful -- will have a good time no matter where they go, since people may very well fawn on them -- for their looks, sense of humor and usefulness.
 
-**Where I went wrong in all this**: extrapolating that a user's feedback group would denote one's membership in the joyous or the miserables clan was a mistake.  if you look at the histograms below you will see that **FAR AND AWAY**, the mode of both populations for total feedback is ZERO. So, clearly, feedback group 1 actually had more of the joyous than it did miserables. So the delineation was flawed. **Miserably so**.
+**Where I went wrong in all this**: extrapolating that a user's feedback group would denote one's membership in the joyous or the miserables clan was a mistake.  if you look at the histograms below you will see that **FAR AND AWAY**, the mode of both populations for total feedback is ZERO. So, clearly, feedback **Group 1** actually had more of the joyous than it did **miserables**. So the delineation was flawed. **Miserably so**.
 
 ```{r, echo=F, fig.height=3}
 par(mfrow=c(1,2))
